--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/vue-fontawesome": "^2.0.10",
+    "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
